--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
     margin:0px auto;
     padding: 50px 0px 50px 0px ;
     border-bottom: 1px ridge;
-    min-height: 400px;
+   min-height: 400px;
 }
 
 .footer{
@@ -26,4 +26,11 @@
     color:#0f0f0f;
     
 
+}
+body{
+    padding-top: 0px;
+    z-index:0;
+}
+.navbar-dark{
+    background-color:#512da8 ;
 }
