--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,3 +41,16 @@ body{
     border-bottom: 1px solid #ddd;
     padding:  10px 10px 10px 10px;
 }
+<div class='card'>
+<div class='card-header' role='tab' id=''>
+    <a href='' data-toggle='collapse' data-target=""></a>
+
+</div>
+<div  class='collapse show' id='' data-parent="#accordian">
+    <div class='card-body'>
+
+    </div>
+
+</div>
+
+</div>
