--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,3 +41,26 @@ body{
     border-bottom: 1px solid #ddd;
     padding:  10px 10px 10px 10px;
 }
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+.carousel-caption{
+    position: relative;
+    padding-top:100px ;
+    text-align: left;
+    padding-left: 20px;
+    left:120px
+
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+    max-width: 300px;
+}
