--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,8 +52,9 @@ body{
     position: relative;
     padding-top:100px ;
     text-align: left;
-    padding-left: 20px;
-    left:120px
+    padding-left:10%;
+    padding-right: 20px;
+    left:0px
 
 }
 
