--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,3 +65,10 @@ body{
     min-height: 300px;
     max-width: 300px;
 }
+#carousel-buttons{
+    bottom:0px;
+    right:0px;
+    position: absolute;
+    z-index:1;
+
+}
