--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,7 +65,7 @@ body{
     min-height: 300px;
     max-width: 300px;
 }
-#carousel-buttons{
+#carouselButton{
     bottom:0px;
     right:0px;
     position: absolute;
